# fossil-delta

./: .gitignore  Cargo.toml  LICENSE  README.md  fossil-delta-ref.leo
fossil-delta/: Cargo.toml
fossil-delta/src/: lib.rs
fossil-delta/src/test-data/: file-b.txt  file-delta.txt
leo-ver-serv/: Cargo.toml  README.md
leo-ver-serv/src/: db-sqlite.rs  main.rs
leo-ver-serv/web/: index.html
leo-ver-serv/web/css/: app.css
leo-ver-serv/web/js/: app.js  vendors.js
py-fossil-delta/: Cargo.toml  python-extension-fossil-delta.md
py-fossil-delta/src/: lib.rs
src/: lib.rs
src/test-data/: file-a.txt
