[package]
name = "fossil-delta"
version = "0.1.5"
authors = ["vitalije <vitalije@kviziracija.net>"]
edition = "2018"
description = "Provides functions for calculating differences between strings and applying calculated deltas"
repository = "https://github.com/vitalije/fossil-delta.git"
readme = "../README.md"
license = "MIT"
keywords = ["diff", "text", "delta", "fossil", "VCS"]
categories = ["algorithms", "compression", "encoding", "text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
