[package]
name = "leo-ver-serv"
version = "0.1.0"
authors = ["vitalije <vitalije@kviziracija.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-files = "0.1.3"
chrono = "0.4.7"
fossil-delta = {version="0.1.5", path="../fossil-delta"}
serde = "1.0.97"
serde_json = "1.0.40"

[dependencies.rusqlite]
version = "0.19.0"
features = ["bundled"]
