[package]
name = "py-fossil-delta"
version = "0.1.3"
authors = ["vitalije <vitalije@kviziracija.net>"]
edition = "2018"
description = "Provides functions for calculating differences between strings and applying calculated deltas"
repository = "https://github.com/vitalije/fossil-delta.git"
readme = "python-extension-fossil-delta.md"
license = "MIT"
keywords = ["python", "diff", "text", "delta", "fossil"]
categories = ["algorithms", "compression", "encoding", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fossil_delta"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.5.2"

[dependencies]
fossil-delta = { path="../fossil-delta", version="0.2.0"}

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]
